--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/Book
 spring.datasource.username=postgres
 spring.datasource.password=12345
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.freemarker.expose-request-attributes=true
