--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ upload.path=D:/BSUIR/DBMS/BookSpring/uploads
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=valerkasiga@gmail.com
-spring.mail.password=cc7b35d2576po
+spring.mail.password=1
 spring.mail.port=465
 spring.mail.protocol=smtps
 mail.debug=true
